增加文档描述